Clarify pattern matching feature status and add preview feature warnings
Co-authored-by: raunak220191 <90885744+raunak220191@users.noreply.github.com>